--- a/Shiny_Tour.Rmd
+++ b/Shiny_Tour.Rmd
@@ -54,4 +54,22 @@ You can also use the `shinyApp` function to define an application inline rather 
 In all of R code chunks above the `echo = FALSE` attribute is used. This is to prevent the R code within the chunk from rendering in the document alongside the Shiny components.
 
 
+##Barplot of Top Ten
+
+```{r}
+top_tencomments <- read_csv("~/Mscs 264 F18/Submit Section B/Project/the_tour/top_tencomments.csv")
+
+mergedtop_tens <- top_tens %>%
+  mutate(Year = as.integer(Year)) %>%
+  left_join(top_tencomments)
+
+
+mergedtop_tens %>%
+    ggplot(aes(x=Year, fill = Notes2)) +
+    geom_bar(position = "fill")
+
+```
+
+
+
 
