--- a/Shiny_Tour.Rmd
+++ b/Shiny_Tour.Rmd
@@ -67,21 +67,28 @@ ggplot()+
 ```{r, echo = FALSE}
 inputPanel(
   checkboxGroupInput("x", label = "Fill variable:",
-    choices = c("Stripped" = "Stripped of title in the current race due to doping.",
+    choices = c("Stripped of Title" = "Stripped of title in the current race due to doping.",
                 "Failed Tests at Some Point" = "Failed tests for doping in another competition or out of competition at some point in their career.",
                 "Sanctioned for Doping, No Failed Tests" = "Sanctioned for doping without failed tests at some point in their career.",
                 "Admitted, No Failed Tests" = "Admitted to doping without failed tests or sanction for the current race.",
                 "Accused, No Failed Tests" = "Accused of doping without failed tests, sanction or admittance in their career.",
                 "Clean" = "Has never been: stripped of a title, failed tests or sanctioned for doping to date, with no known accusations."), 
-    selected = "Stripped of title in the current race due to doping.")
+    selected = "Has never been: stripped of a title, failed tests or sanctioned for doping to date, with no known accusations.")
 )
+
+
 
 renderPlot({
   mergedtop_tens %>%
-    filter(Notes2 == input$x) %>%
+    filter(Rank != 11,
+           Notes2 %in% input$x) %>%
     ggplot() + 
       geom_bar(mapping = aes(x = Year, fill = Notes2), 
-               position = "stack", stat = "count")})
+               position = "stack", stat = "count")+
+    coord_cartesian(ylim= c(0,10),
+                    xlim = c(1998,2015)) +
+    theme_bw()
+})
     
 ```
 
