--- a/Shiny_Tour.Rmd
+++ b/Shiny_Tour.Rmd
@@ -1,8 +1,12 @@
 ---
-title: "le Tour de France"
+title: "The Tour de France"
 runtime: shiny
 output: html_document
 ---
+
+#{.tabset .tabset-fade .tabset-pills}
+
+
 
 ```{r setup, include=FALSE}
 library(tidyverse)
@@ -17,7 +21,7 @@ mergedtop_tens<- as.tibble(readRDS("~/Mscs 264 F18/Submit Section B/TourProject/
 ```
 
 
-
+##World Map 
 ```{r , echo=FALSE}
 inputPanel(
   checkboxInput("doped", label = "Exclude Doped Winners", FALSE),
@@ -108,12 +112,13 @@ renderPlot({
 ```
 
 
+##Interactive Table
 ```{r, echo = FALSE}
 
 inputPanel(
   sliderInput("slider1", label = h3("Year"), min = 1998, 
         max = 2015, value = c(1998, 2015), sep = ""),
-  textInput("text", label = h3("Key Words"), value = " ")
+  textInput("text", label = h3("Key Words"), value = NULL , placeholder = "Eg. EPO")
 )
 
 renderTable({ 
@@ -132,9 +137,9 @@ top_tens %>%
 
 
 
-###What does it take to win? 
+##What does it take to win? 
 
-```{r}
+```{r, echo=FALSE}
 a <- tour_data %>%
   mutate(Margin = str_remove(Margin, "\\+ ")) %>%
   separate(Margin, into = c("mHour", "mMin", "mSec" ), sep = " ", fill = "left") %>%
@@ -142,32 +147,48 @@ a <- tour_data %>%
          mMin = parse_number(mMin)/60,
          mSec = parse_number(mSec)/3600) %>%
   mutate(Margin = rowSums(cbind(.$mHour, .$mMin, .$mSec) , na.rm = TRUE)) %>%
+  mutate(Year = parse_number(Year))%>%
+  mutate(Margin = Margin*60)%>%
   select(Year:`Time/Points`, Margin, `Stage wins`:`Stages in lead`)
+```
 
-a %>% 
-  filter(Year >= 1913) %>%
+```{r, echo=FALSE}
+inputPanel(
+  selectInput("select", label = h3("Select box"), 
+    choices = list("Margin of Win" = 1, "Stage Wins" = 2, "Stages in Lead" = 3), 
+    selected = 1), 
+  sliderInput("slider2", label = h3("Year"), min = 1900, 
+        max = 2015, value = c(1900, 2015), sep = "")
+)
+
+
+renderPlotly(
+if(input$select == 1) {
+  a %>% 
+  filter(Year < 1905 | Year >1914) %>%
+  filter(Year >= input$slider2[1], Year <= input$slider2[2]) %>%
   filter(Margin !=0 ) %>%
-  ggplot(aes(x=parse_number(Year), y=Margin))+
+  ggplot(aes(x=Year, y=Margin))+
   geom_point()+
-  geom_smooth()
-
+  geom_smooth()+
+  geom_text(x = 1910, y = 70, label = "Data not reliable / WWI", size = 1.9) +
+  geom_text(x = 1943, y = 20, label = "WWII", size = 1.9) 
+}else if(input$select == 2){
 a %>% 
-  filter(Year >= 1950) %>%
-  filter(Margin !=0 ) %>%
-  ggplot(aes(x=parse_number(Year), y=Margin))+
-  geom_point()+
-  geom_smooth()
-
-a %>%
+  filter(Year >= input$slider2[1], Year <= input$slider2[2]) %>%
   filter(!is.na(`Stage wins`))%>%
   ggplot()+
-  geom_bar(aes(x=`Stage wins`, stat = "count"))
-
-
+  geom_bar(aes(x=`Stage wins`))
+}else if(input$select == 2){
 a %>%
+  filter(Year >= input$slider2[1], Year <= input$slider2[2]) %>%
   filter(!is.na(`Stages in lead`)) %>%
   ggplot()+
-  geom_bar(aes(x=parse_integer(`Stages in lead`)))
+  geom_bar(aes(x=parse_integer(`Stages in lead`)))+
+  labs(x = "Stages in the Lead")
+})
+
+
 ```
 
 
